<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

        <item android:id="@+id/emams"
            android:icon="@drawable/ic_home"
            android:title="@string/examList"
            />

        <item android:id="@+id/addExam"
            android:icon="@drawable/ic_addexamicon"
            android:title="@string/addExam"/>


        <item android:id="@+id/studentManger"
            android:icon="@drawable/person"
            android:title="@string/mangeStudent"/>

        <item android:id="@+id/results"
            android:icon="@drawable/ic_results"
            android:title="@string/results"/>

        <item android:id="@+id/questions"
            android:icon="@drawable/questionsicon"
            android:title="@string/questions"/>

    </group>


    <item android:title="">


        <item android:title=""/>
        <item android:title=""/>

    </item>



    <item android:title="">

        <menu>


            <item android:title="@string/exit"
                android:id="@+id/exit"
                android:icon="@drawable/ic_exiticon"/>



        </menu>

    </item>







</menu>