<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiantcolor"
    tools:context="com.essam.microprocess.dressamdaher.Fragment.First_Fragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:isScrollContainer="false"
    android:scrollbars="none"
    android:fillViewport="true"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    android:padding="20dp"
    >


    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:elevation="4dp"
        android:scaleType="fitXY"
        android:src="@drawable/classroom"

        />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/essam" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:elevation="5dp"
        android:fontFamily="@font/cairo"
        android:gravity="center_horizontal"
        android:text="@string/s_in_up"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="italic" />


    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/linearLayout"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"

        >

        <Button
            android:id="@+id/Goto_signin"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_background2"
            android:elevation="4dp"
            android:fontFamily="@font/cairo"
            android:text="@string/Sign_in"
            android:textColor="@color/color1"
            android:textSize="16sp"
             />

        <Button
            android:id="@+id/Goto_signup"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:background="@drawable/button_background"
            android:elevation="4dp"
            android:fontFamily="@font/cairo"
            android:text="@string/Sign_up"
            android:textColor="@color/color2"
            android:textSize="16sp"
             />

    </LinearLayout>
</LinearLayout>
</ScrollView>
</RelativeLayout>
